Just some javadoc and syntax sugar available in newer java versions.